# DOPtools

./: .gitignore  CLI_USAGE.md  INSTALLATION.md  MODERNIZATION_SUMMARY.md  pyproject.toml  test_installation.py
doptools/: py.typed
doptools/chem/: chem_features.py
doptools/cli/: main.py
examples/: circus_config.json  complex_config.json  optimization_config.json
