[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doptools"
version = "1.3.9"
description = "A package for calculation of molecular descriptors in Scikit-Learn compatible way and model optimization"
readme = "README.rst"
license = "LGPL-3.0-or-later"
authors = [
    {name = "Dr. Pavel Sidorov", email = "pavel.o.sidorov@gmail.com"}
]
maintainers = [
    {name = "Dr. Pavel Sidorov", email = "pavel.o.sidorov@gmail.com"}
]
keywords = ["chemistry", "machine-learning", "molecular-descriptors", "cheminformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.25",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "tqdm>=4.66.3",
    "scikit-learn>=1.5",
    "ipython>=7.22",
    "chython>=2.9.2",
    "rdkit>=2023.09.02",
    "optuna>=3.5",
    "xgboost>=2.0",
    "timeout-decorator==0.5",
    "xlwt>=1.3",
    "xlrd>=2.0",
    "openpyxl>=3.1",
    "pillow>=11.2.1",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/POSidorov/DOPtools"
Repository = "https://github.com/POSidorov/DOPtools"
Documentation = "https://github.com/POSidorov/DOPtools"
"Bug Tracker" = "https://github.com/POSidorov/DOPtools/issues"

[project.scripts]
doptools = "doptools.cli.main:cli"
launch_preparer = "doptools.cli.launch_preparer:launch_preparer"
launch_optimizer = "doptools.cli.launch_optimizer:launch_optimizer"
plotter = "doptools.cli.plotter:plotter"
rebuilder = "doptools.cli.rebuilder:rebuilder"
"launch_preparer.py" = "doptools.cli.launch_preparer:launch_preparer"
"launch_optimizer.py" = "doptools.cli.launch_optimizer:launch_optimizer"
"plotter.py" = "doptools.cli.plotter:plotter"
"rebuilder.py" = "doptools.cli.rebuilder:rebuilder"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pre-commit>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "pytest-xdist>=2.0",
]

[tool.setuptools]
packages = ["doptools", "doptools.chem", "doptools.cli", "doptools.optimizer", "doptools.estimators"]

[tool.setuptools.package-data]
doptools = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["doptools"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chython.*",
    "rdkit.*",
    "optuna.*",
    "xgboost.*",
    "timeout_decorator.*",
    "xlwt.*",
    "xlrd.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["doptools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]